Testing particles.js stuff (and working on mobile fixes)

--- a/files/style/snr.css
+++ b/files/style/snr.css
@@ -2,6 +2,7 @@
 .wrapper {
     margin: auto;
     width: 85%;
+    height: 100vh;
     position: absolute;
     top: 0px;
     left: 0px;
@@ -27,8 +28,13 @@ body {
     background-color: #040201;
     /*width: 40em;*/
     margin: 0 auto;
+    padding: 0;
+    height: 100vh;
     text-align: center;
     font-family: Georgia;
+}
+#particles-js {
+    height: 100vh;
 }
 main {
     color: #FFFFFF;
